<resources>
    <string name="app_name">My Cart</string>
    <string name="myCart">My Cart</string>
    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="test_price">100000</string>
    <string name="quantity">10</string>
    <string name="total">Total</string>
    <string name="search">Search.....</string>
</resources>