<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <TextView
        android:id="@+id/productNameCart"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/test"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnIncrease"
        app:layout_constraintStart_toEndOf="@+id/productImageCart"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp" />

    <ImageView
        android:id="@+id/productImageCart"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/productPriceCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/test_price"
        android:textColor="@color/vermilion"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/productNameCart"
        app:layout_constraintTop_toBottomOf="@+id/productNameCart" />

    <ImageButton
        android:id="@+id/btnIncrease"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <ImageButton
        android:id="@+id/btnDecrease"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/quantity"
        app:srcCompat="@drawable/minus" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDecrease"
        app:layout_constraintEnd_toEndOf="@+id/btnIncrease"
        app:layout_constraintTop_toBottomOf="@+id/btnIncrease" />

    <TextView
        android:id="@+id/productTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_price"
        android:textColor="@color/vermilion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImageCart"/>
</androidx.constraintlayout.widget.ConstraintLayout>